# white-clover

./: .gitignore  CMakeLists.txt  Makefile
config/: settings.json
include/: i_process_manager.h  i_receiver.h  i_sender.h  i_thread_context.h  i_thread_manager.h  input_sender_context.h  key_monitor_context.h  message_channel.h  message_types.h  process_manager.h  receiver.h  sender.h  settings_manager.h  thread_context.h  thread_manager.h
src/: input_sender_context.cpp  key_monitor_context.cpp  main.cpp  process_manager.cpp  receiver.cpp  sender.cpp  settings_manager.cpp  thread_context.cpp  thread_manager.cpp
